<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm</string>
    <string name="action_bar_title">Alarms by TimeZone</string>
    <string name="new_alarm_text">New Alarm</string>
    <string name="new_time_zone_text">New Time Zone</string>
    <string name="go_home">To Home</string>
    <string name="set_text">Set</string>
    <string name="set_new_alarm_text">Set New Alarm</string>
    <string name="update_text">Update</string>
    <string name="update_alarm_text">Update Alarm</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete_text">Delete</string>
    <string name="delete_confirm_question">Are you sure you want to delete this alarm?</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_time_zone">Choose Time Zone</string>
    <string name="by_default">by default</string>
    <string name="settings_menu_text">Settings</string>
    <string name="title_activity_list_alarms_swipe_view">ListAlarmsSwipeViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_time_zones_conf">Time Zones Conf</string>
    <string name="title_activity_expandable_alarms">ExpandableAlarmsActivity</string>
    <string name="title_activity_new_time_zones_list">NewTimeZonesListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="repeat_day_sun">SUN</string>
    <string name="repeat_day_mon">MON</string>
    <string name="repeat_day_tue">TUE</string>
    <string name="repeat_day_wed">WED</string>
    <string name="repeat_day_thu">THU</string>
    <string name="repeat_day_fri">FRI</string>
    <string name="repeat_day_sat">SAT</string>
    <string name="dismiss">Dismiss</string>

</resources>
