<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
            android:id="@+id/alarmId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:visibility="invisible" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/alarmHourLocal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:textSize="35sp"
            android:gravity="bottom"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/alarmDateLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/alarmHourLocal"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/alarmSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
			android:layout_marginRight="5dp" 
			android:checked="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/alarmHour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-thin"
            android:gravity="bottom"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/alarmDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/alarmHour"
            android:visibility="gone" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/alarmCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif-thin"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" 
        android:gravity="center_horizontal">
        
        <TextView 
            android:id="@+id/repeat_day_sun"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_sun" />
        <TextView 
            android:id="@+id/repeat_day_mon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_mon" />
        <TextView 
            android:id="@+id/repeat_day_tue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_tue" />
        <TextView 
            android:id="@+id/repeat_day_wed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_wed" />
        <TextView 
            android:id="@+id/repeat_day_thu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_thu" />
        <TextView 
            android:id="@+id/repeat_day_fri"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_fri" />
        <TextView 
            android:id="@+id/repeat_day_sat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="3sp"
            android:paddingLeft="3sp"
            android:gravity="bottom"
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/repeat_day_sat" />
        
    </LinearLayout>
	 
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="10dp"
        android:background="@color/blue_light" />
	 
</LinearLayout>
